--- a/test.css
+++ b/test.css
@@ -1,3 +1,9 @@
+html, body, table {
+    height: 100%;
+}
+body {
+    margin: 0;
+}
 table{
     border-collapse: collapse;
 }
@@ -7,16 +13,18 @@ td {
     text-align: left;
 }
 td,th {
-    width: 150px;
+    width: 33%;
 }
 thead tr {
-    display: block;
-    position: relative;
+    display: flex;
+}
+thead {
+    width: 100%;
 }
 tbody {
     display: block;
     overflow: auto;
     width: 100%;
-    height: 300px;
+    height: 100%;
 }
 
