--- a/template/ts.grid.pager.html
+++ b/template/ts.grid.pager.html
@@ -1,13 +1,11 @@
 <div class="ts-grid-pager">
-    Pages:
-    <span class="ts-grid-pager-nav-button ts-grid-pager-nav-inactive-button"><a href="javascript:void(0);">First</a></span>
-    <span class="ts-grid-pager-nav-button ts-grid-pager-nav-inactive-button"><a href="javascript:void(0);">Prev</a></span>
-    <span class="ts-grid-pager-page ts-grid-pager-current-page">1</span>
-    <span class="ts-grid-pager-page"><a href="javascript:void(0);">2</a></span>
-    <span class="ts-grid-pager-page"><a href="javascript:void(0);">3</a></span>
-    <span class="ts-grid-pager-page"><a href="javascript:void(0);">4</a></span>
-    <span class="ts-grid-pager-page"><a href="javascript:void(0);">5</a></span>
-    <span class="ts-grid-pager-nav-button"><a href="javascript:void(0);">...</a></span>
-    <span class="ts-grid-pager-nav-button"><a href="javascript:void(0);">Next</a></span>
-    <span class="ts-grid-pager-nav-button"><a href="javascript:void(0);">Last</a></span> &nbsp;&nbsp; 1 of 7
+    <span class="ts-grid-pager-nav-button" ng-click="gridPagerCtrl.goToPage(0)">&lt&lt</span>
+    <span class="ts-grid-pager-nav-button" ng-click="gridPagerCtrl.goToPage(gridCtrl.page - 1)">&lt</span>
+    <span class="ts-grid-pager-page"
+          ng-class="{'ts-grid-pager-page-current': gridCtrl.page == pageNumber}"
+          ng-click="gridPagerCtrl.goToPage(pageNumber)"
+          ng-repeat="pageNumber in gridPagerCtrl.getPageNumbers()">{{pageNumber + 1}}</span>
+    <span class="ts-grid-pager-nav-button" ng-click="gridPagerCtrl.goToPage(gridCtrl.page + 1)">&gt</span>
+    <span class="ts-grid-pager-nav-button" ng-click="gridPagerCtrl.goToPage(gridPagerCtrl.getPageNumbers().length - 1)">&gt&gt</span>
+    <span>{{gridCtrl.page + 1}} of {{gridPagerCtrl.getPageNumbers().length}}</span>
 </div>
