--- a/ts.grid.css
+++ b/ts.grid.css
@@ -1,3 +1,7 @@
+.ts-grid, .ts-grid *,.ts-grid :after,.ts-grid :before {
+    box-sizing:border-box
+}
+
 .ts-grid {
     position: relative;
     height: 100%;
